# scitt-ccf-ledger

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  CodeQL.yml  DEVELOPMENT.md  README.md  build.sh  mypy.ini  pyscitt.sh  run_functional_tests.sh  run_fuzz_tests.sh  run_unit_tests.sh  start.sh
.config/: CredScanSuppressions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  release-checklist.md
.github/workflows/: bencher.yml  build-test-virtual.yml  build-test.yml  codeql.yml  long-test.yml  publish-gh-release-files.yml  publish-pyscitt-to-pypi.yml  python-publish.yml  release.yml
.pipelines/: ado_pipauth.yml  azure-pipelines.yml  ccf.yml  common.yml  docker-push.yml  local_virtual_build.yml  obpdocker.yml  pullrequest.yml  python.yml
app/: CMakeLists.txt  CMakePresets.json  cpack.cmake  fetch-did-web-doc-attested.sh  fetch-did-web-doc-unattested.sh  fetch-did-web-doc.py  fetch-did-web-doc.sh  oe_sign.conf  ubsan.suppressions
app/cmake/: target_link_system_libraries.cmake  tools.cmake  version.cmake
app/constitution/: actions.js  scitt.js
app/src/: app_data.h  call_types.h  cbor.h  configurable_auth.h  constants.h  cose.h  http_error.h  kv_types.h  main.cpp  odata_error.h  openenclave.h  openssl_wrappers.h  operations_endpoints.h  policy_engine.h  profiles.h  public_key.h  receipt.h  service_endpoints.h  signature_algorithms.h  tracing.h  util.h  verified_details.h  verifier.h  visit_each_entry_in_value.h
app/src/did/: attested.h  document.h  resolver.h  unattested.h
app/src/did/web/: method.h  syntax.h
app/src/historical/: historical_queries_adapter.h  lru.h
app/src/prefix_tree/: batched_prefix_tree.h  bitvector.h  frontend.h  indexing_strategy.h  kv_types.h  prefix_tree.h  read_receipt.h
app/src/rego_policies/: sample_rule.rego  scalar_sample.rego
app/unit-tests/: call_types_test.cpp  cbor_test.cpp  cbor_test_utils.h  configurable_auth_test.cpp  cose_test.cpp  generic_error_adapter_test.cpp  historical_queries_adapter_test.cpp  js_test_setup.h  main.cpp  policy_engine_perf_test.cpp  policy_engine_test.cpp  service_endpoints_test.cpp  testutils.cpp  testutils.h  verifier_details_test.cpp  verifier_test.cpp
app/unit-tests/did/: mock_resolver.h  resolver_test.cpp
app/unit-tests/did/web/: syntax_test.cpp
app/unit-tests/historical/: lru_test.cpp
app/unit-tests/prefix_tree/: batched_prefix_tree_test.cpp  bitvector_test.cpp  prefix_tree_test.cpp  test_common.h
demo/: README.md
demo/azure-confidential-containers/: README.md  arm-template.json
demo/contract/: 0-install-cli.sh  1-contract-setup.sh  1-scitt-setup.sh  10-register-contract.sh  10-submit-contract.sh  2-create-did.sh  3-sign-contract.sh  4-register-contract.sh  4-submit-contract.sh  5-view-receipt.sh  6-validate.sh  7-create-did.sh  7-fetch-contracts.sh  7-retrieve-contracts.sh  8-create-did.sh  8-retrieve-contract.sh  9-sign-contract.sh  README.md  contract.json  update-contract.sh
demo/cts_poc/: 0-cacerts-generator.sh  1-operator-demo.sh  2-claim-generator.sh  2a-claim-generator.sh  3-client-demo.sh  README.md  cacerts-generator.sh  claim-generator.sh  client-demo.sh  configuration.tmpl.json  notary-sign.sh  operator-demo.sh
demo/github/: 0-install-cli.sh  1-scitt-setup.sh  2-create-did.sh  3-sign.sh  4-submit.sh  5-view-receipt.sh  6-validate.sh  README.md
demo/signing-and-policies/: README.md
demo/transparency-service-poc/: 1-operator-demo.sh  2-claim-generator.sh  3-client-demo.sh  README.md  configuration.tmpl.json
docker/: Dockerfile  README.md  build.sh  dev-config.tmpl.json  enclave.Dockerfile  enclave.Dockerfile.dockerignore  keygenerator.sh  push_image.sh  run-dev.sh  snp.Dockerfile  snp.Dockerfile.dockerignore  start-app.sh  virtual.Dockerfile  virtual.Dockerfile.dockerignore
docs/: clients.md  configuration.md  inputs.md  reproducibility.md  scitt.md
docs/schemas/: attestedsvc-signed-statement.cddl  x509-signed-statement.cddl
pyscitt/: README.md  pyproject.toml  setup.py
pyscitt/pyscitt/: client.py  crypto.py  did.py  governance.py  key_vault_sign_client.py  local_key_sign_client.py  prefix_tree.py  receipt.py  verify.py
pyscitt/pyscitt/cli/: client_arguments.py  create_did_web.py  embed_receipt_in_cose.py  governance.py  main.py  prefix_tree.py  pretty_receipt.py  register.py  retrieve_signed_claims.py  retrieve_signed_contracts.py  sign.py  sign_claims.py  sign_contract.py  split_payload.py  submit_signed_claims.py  submit_signed_contract.py  upload_did_web_doc_to_github.py  validate.py  validate_contract.py  validate_cose.py
scripts/: check-format.sh  ci-checks.sh  extract-release-notes.py  notice-check.py  scan-build.sh  setup-env.sh
test/: README.md  conftest.py  constants.py  fuzz_api_submissions.py  policies.py  requirements.txt  test_auth.py  test_blocking.py  test_ccf.py  test_cli.py  test_configuration.py  test_did.py  test_encoding.py  test_faketime.py  test_historical.py  test_load.py  test_operations.py  test_perf.py  test_prefix_tree.py  test_resolution.py  test_rfc9942.py  test_scrapi_registration.py  test_tracing.py  test_verify.py  test_version.py  test_x509.py
test/e2e_dotnet_sdk/: Program.cs  pipeline-dotnet-cts-cli.csproj
test/infra/: assertions.py  async_utils.py  bencher.py  cchost.py  did_web_server.py  fixtures.py  generate_cacert.py  jwt_issuer.py  proxy.py  x5chain_certificate_authority.py
test/load_test/: .gitignore  docker_monitor.py  generate_charts.py  generate_dotnet_charts.py  locustfile.py  start.sh
test/payloads/: cosesign1tool-scitt-a3be7e5.cose  css-attested-cosesign1-20250617.cose  css-attested-cosesign1-20250812.cose  css-attested-cosesign1-20250925.cose  css-attested-cosesign1-20260302.cose  cts-hashv-cwtclaims-b64url.cose  manifest.spdx.json.sha384.digest.cose
test/test_vectors/scitt-cose/v1/fail-tampered-path/: log-key.pub  receipt.cose  statement.cose  transparent-statement.cose
test/transparent_statements/: esrp-cts-db.json
(+5 files in other folders)
