# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

cmake_minimum_required(VERSION 3.25)

include(FetchContent)

# Allow FetchContent_Populate() calls (used for t_cose and snmalloc where we
# need to download source without running add_subdirectory).
cmake_policy(SET CMP0169 OLD)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if((NOT CMAKE_CXX_COMPILER)
   AND "$ENV{CXX}" STREQUAL ""
)
  set(CMAKE_CXX_COMPILER "clang++-18")
  message("Set CMAKE_CXX_COMPILER to clang++-18")
endif()

project(scitt
  LANGUAGES C CXX
)
set(CMAKE_CXX_STANDARD 20)

option(BUILD_TESTS "Whether to build tests" ON)
option(ENABLE_CLANG_TIDY "Run clang-tidy on the codebase" OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(ccf REQUIRED)
find_package(OpenSSL REQUIRED)

include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/version.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/target_link_system_libraries.cmake)

# Fetch and build QCBOR and t_cose dependencies
set(BUILD_QCBOR_TEST OFF CACHE STRING "" FORCE)
FetchContent_Declare(
  qcbor
  GIT_REPOSITORY https://github.com/laurencelundblade/QCBOR.git
  GIT_TAG        v1.6.1
)
FetchContent_MakeAvailable(qcbor)

FetchContent_Declare(
  t_cose
  GIT_REPOSITORY https://github.com/laurencelundblade/t_cose.git
  GIT_TAG        v1.1.3
)
FetchContent_Populate(t_cose)

add_library(t_cose STATIC
  ${t_cose_SOURCE_DIR}/src/t_cose_sign1_sign.c
  ${t_cose_SOURCE_DIR}/src/t_cose_parameters.c
  ${t_cose_SOURCE_DIR}/src/t_cose_sign1_verify.c
  ${t_cose_SOURCE_DIR}/src/t_cose_util.c
  ${t_cose_SOURCE_DIR}/crypto_adapters/t_cose_openssl_crypto.c
)
target_compile_definitions(t_cose PRIVATE
  T_COSE_USE_OPENSSL_CRYPTO=1
  T_COSE_DISABLE_SHORT_CIRCUIT_SIGN=1
)
target_include_directories(t_cose
  PUBLIC  ${t_cose_SOURCE_DIR}/inc
  PRIVATE ${t_cose_SOURCE_DIR}/src
)
target_link_libraries(t_cose PUBLIC qcbor PRIVATE OpenSSL::Crypto)
set_property(TARGET t_cose PROPERTY POSITION_INDEPENDENT_CODE ON)

set(CMAKE_GENERATED_COMMENT
    "This file was auto-generated by CMake from a corresponding *.in file. DO NOT EDIT"
)
configure_file(src/generated/constants.h.in src/generated/constants.h @ONLY)

set(TRIESTE_USE_SNMALLOC OFF)
set(REGOCPP_USE_SNMALLOC OFF)
set(REGOCPP_BUILD_SHARED ON)

# Trieste unconditionally depends on snmalloc for headers and links it as an
# INTERFACE dependency. However, we can't let trieste build snmalloc from
# source because CCF 7.x already provides a snmallocshim-static imported
# target, causing a name collision.
#
# Solution: fetch snmalloc source ourselves (for headers only), then create a
# minimal INTERFACE target. FetchContent_Populate downloads the source without
# running add_subdirectory, and marks it as populated so trieste skips it.
FetchContent_Declare(
  snmalloc
  GIT_REPOSITORY https://github.com/microsoft/snmalloc
  GIT_TAG b8e28be14b3fd98e27c2fe87c0296570f6d3990e
)
FetchContent_Populate(snmalloc)
add_library(snmalloc INTERFACE)
target_include_directories(snmalloc INTERFACE
  $<BUILD_INTERFACE:${snmalloc_SOURCE_DIR}/src>
)
add_library(snmalloc-new-override INTERFACE)

FetchContent_Declare(
  regocpp
  GIT_REPOSITORY https://github.com/microsoft/rego-cpp
  # https://github.com/microsoft/rego-cpp/releases/tag/v1.3.0
  GIT_TAG        975bfa0823609aec29b8e88a96eb46577977c57d
)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
FetchContent_MakeAvailable(regocpp)

# add CCF dependencies
# add linking options
# add SAN options if CCF is built with them
add_ccf_app(scitt
  SRCS src/main.cpp
)

# Mark third-party targets as SYSTEM so their headers (and transitive deps)
# automatically use -isystem, suppressing warnings we don't control.
set_property(TARGET trieste PROPERTY SYSTEM TRUE)
set_property(TARGET json PROPERTY SYSTEM TRUE)
set_property(TARGET yaml PROPERTY SYSTEM TRUE)
set_property(TARGET t_cose PROPERTY SYSTEM TRUE)
set_property(TARGET qcbor PROPERTY SYSTEM TRUE)
set_property(TARGET snmalloc PROPERTY SYSTEM TRUE)

set(SCITT_TARGET scitt)
set_target_properties(${SCITT_TARGET} PROPERTIES OUTPUT_NAME cchost)
add_dependencies(${SCITT_TARGET} regocpp::rego)
target_link_libraries(${SCITT_TARGET} PRIVATE regocpp::rego t_cose)

# The INCLUDE_DIRS argument of the add_ccf_app macro adds directories with
# -isystem, which silences any warnings in them, which is undesirable for our
# own code. We manually add them instead to workaround this and make sure -I
# gets used.
target_include_directories(${SCITT_TARGET} PRIVATE src ${CMAKE_CURRENT_BINARY_DIR}/src)

if (ENABLE_CLANG_TIDY)
  message("Enabling clang-tidy for target ${SCITT_TARGET}")
  find_program(CLANG_TIDY_EXE NAMES "clang-tidy-18" "clang-tidy")
  if(NOT CLANG_TIDY_EXE)
    message(FATAL_ERROR "clang-tidy not found. Please install clang-tidy-18 or clang-tidy to enable static analysis, e.g. tdnf install -y clang-tools-extra-devel")
  endif()
  set_target_properties(${SCITT_TARGET} PROPERTIES
    C_CLANG_TIDY "${CLANG_TIDY_EXE}"
    CXX_CLANG_TIDY "${CLANG_TIDY_EXE}")
else()
  message("clang-tidy is disabled for target ${SCITT_TARGET}")
endif ()

install(
  FILES
    constitution/actions.js
    constitution/apply.js
    constitution/resolve.js
    constitution/validate.js
    constitution/scitt.js
  DESTINATION share/scitt/constitution)

if (BUILD_TESTS)

  # Avoid Gtest files ending up in the scitt install directory
  set(INSTALL_GTEST OFF)
  include(FetchContent)
  FetchContent_Declare(
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG release-1.12.1
  )
  FetchContent_MakeAvailable(googletest)

  set(RC_ENABLE_GTEST ON CACHE INTERNAL "")
  FetchContent_Declare(
    rapidcheck
    GIT_REPOSITORY https://github.com/emil-e/rapidcheck.git
    GIT_TAG ff6af6fc683159deb51c543b065eba14dfcf329b
  )

  # Use FetchContent_MakeAvailable to simplify the inclusion of RapidCheck
  FetchContent_MakeAvailable(rapidcheck)

  add_san(gtest)
  add_san(rapidcheck)

  enable_testing()

  # Use globbing to collect unit test source files
  file(GLOB UNIT_TEST_SOURCES "unit-tests/**test.cpp")
  file(GLOB_RECURSE UNIT_TEST_SOURCES_RECURSE "unit-tests/**/*test.cpp")
  list(APPEND UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES_RECURSE})
  add_executable(
    unit_tests
    unit-tests/main.cpp
    ${UNIT_TEST_SOURCES}
  )
  add_san(unit_tests)
  # add test payloads to unit_tests from test/payloads directory
  file(GLOB TEST_PAYLOADS_EXTERNAL "${CMAKE_CURRENT_SOURCE_DIR}/../test/payloads/*")
  foreach(FILE ${TEST_PAYLOADS_EXTERNAL})
    get_filename_component(FILENAME ${FILE} NAME)
    configure_file(${FILE} ${CMAKE_CURRENT_BINARY_DIR}/test_payloads/${FILENAME} COPYONLY)
  endforeach()
  file(GLOB_RECURSE TEST_PAYLOADS "${CMAKE_CURRENT_BINARY_DIR}/test_payloads/*")
  target_sources(unit_tests PRIVATE ${TEST_PAYLOADS})
  # end adding test payloads
  target_link_system_libraries(unit_tests PRIVATE
    GTest::gmock
    rapidcheck
    rapidcheck_gtest
    quickjs
    ccf_js
    ccfcrypto
    ccf_kv
    ccf_endpoints
    evercbor
    http_parser
    ccf
  )
  target_link_libraries(unit_tests PRIVATE regocpp::rego t_cose)

  target_include_directories(unit_tests PRIVATE src unit-tests)
  target_include_directories(
    unit_tests SYSTEM PRIVATE
    ${CCF_DIR}/include
    ${CCF_DIR}/include/3rdparty
  )

  if (ENABLE_CLANG_TIDY)
    set_target_properties(unit_tests PROPERTIES
      C_CLANG_TIDY "${CLANG_TIDY_EXE}"
      CXX_CLANG_TIDY "${CLANG_TIDY_EXE}")
  endif ()

  include(GoogleTest)
  gtest_discover_tests(unit_tests)
endif()

include(cpack.cmake)

install(TARGETS scitt EXPORT scitt DESTINATION bin)
